--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Summary of important user-visible changes for ncarray 1.0.4:
 ------------------------------------------------------------
 
  ** Avoid obsolete strmatch function
+ ** Use a tolerance in test script (bug #49391)
 
 Summary of important user-visible changes for ncarray 1.0.3:
 ------------------------------------------------------------
